# AIxiezuo

./: .env.example  .gitignore  CODEBUDDY.md  README.md  main.py  pyproject.toml  start_web.py
doc/: README.md  WEB_USAGE.md  alpha_prompt.md  alpha_prompt_role.md  code_analyze.md
doc/architecture/: code_analyze.md
doc/development/: DEV_DOC.md  TEMPLATE_GUIDE.md
doc/guides/: WEB_USAGE.md  uv_setup_guide.md
doc/prompts/: alpha_prompt.md
web/: index.html
