[project]
name = "aixiezuo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.0.11",
    "langchain-community>=0.0.10",
    "langchain-google-genai>=0.0.8",
    "langchain-openai>=0.0.5",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
